css/main.css
/* ... */
.videoWrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}
.videoWrapper figcaption {
    position: absolute;
    top: 100%;
    padding: 1em;
    text-align: center;
    background: #91f6c4;
    display: block;
    width: 100%;
}

/* site header */
.site-header {
    text-align: center;
    padding: 0 10px;
    max-width: 1140px;
    margin: 0 auto;
}
.site-header h1,
.site-header p,
.scroll-nav p {
    font-size: 1.125em;
    font-weight: 300;
    color: #736357;
}
.site-header a,
.scroll-nav a {
    text-decoration: none;
    color: #736357;
}
.site-header > p {
    width: 100%;
    margin: 1em 0;
}
.site-header .banner {
    margin: 1em 0;
}
.site-header h1,
.site-heading {
    margin: -40px 0 0 0;
}
.site-header span {
    position: relative;
    display: inline-block;
    width: 149px;
    height: 149px;
    vertical-align: middle;
}
.site-header span span.text {
    position: absolute;
    display: inline;
    margin: auto;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}
.site-header span.name {
    background: #91f6c4;
    border-radius: 75px;
}
.site-header span.name span.text {
    width: 80%;
    height: 2.8em;
}
.site-header span.occupation {
    border: 2px solid #91f6c4;
    border-radius: 74px;
    margin-left: -20px;
}
.site-header span.occupation span.text {
    width: 60%;
    height: 2.8em;
}
@media only screen and (min-width: 35em) {
    /* > 560px */
    .site-header .banner {
        margin: 4em 0;
    }
    .site-header .banner img {
        margin: 0 -20px 0 0;
    }
    .site-header h1,
    .site-heading {
        display: inline-block;
        margin: 0;
    }
}

/* main navagation */
.main-nav {
    border-bottom: 1px solid #999;
    border-top: 1px solid #999;
    margin: 1em 0;
}
.main-nav .menu-toggle {
    display: none;
    float: left;
    background-color: #91f6c4;
    height: 48px;
    width: 48px;
    background-image: url(img/hamburger-menu@2x.png);
    background-size: 24px 24px;
    background-position: center center;
    background-repeat: no-repeat;
}
.main-nav ul,
.scroll-nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.main-nav ul li,
.scroll-nav ul li {
    display: inline-block;
    padding: 1em 0;
    font-weight: 300;
}
.main-nav ul li a {
    padding: 1em 20px;
}
.main-nav ul li a:hover,
.scroll-nav ul li a:hover {
    background: #91f6c4;
}
.main-nav ul li a.current,
.scroll-nav ul li a.current {
    background: none;
    color: #736357;
    border-bottom: 2px solid #736357;
}
.scroll-nav {
    background: #f1f1f1;
    position: fixed;
    z-index: 999;
    top: -100px;
    width: 100%;
    box-shadow: 0 2px #ddd;
    transition: top 1s ease;
}
.scroll-nav.show {
    top: 0px;
}
.scroll-nav > div {
    position: relative;
    max-width: 1140px;
    margin: 0 auto;
    padding: 0 10px;
}
.scroll-nav p {
    display: none;
}
.scroll-nav ul {
    display: block;
    text-align: center;
}
.scroll-nav ul li a {
    padding: 0.5em 10px;
}
@media only screen and (min-width: 35em) {
    .scroll-nav p {
        display: inline-block;
    }
    .scroll-nav ul {
        display: inline-block;
        text-align: right;
        position: absolute;
        right: 1em;
    }
}

.button {
    cursor: pointer;
    text-decoration: none;
    display: inline-block;
    background: #91f6c4;
    border-radius: 3px;
    box-shadow: 0px 3px 0px 0px #2fee8f;
    font-size: 0.75em;
    font-weight: 400;
    color: #736357;
    padding: 8px 8px;
}
.button:hover {
    background: #b4f9d6;
}
.button:active {
    box-shadow: 0px 3px 0px 0px #b4f9d6;
}
.button.goto:after {
    content: " \2197";
}

/* portfolio nav */
.portfolio-nav {
    position: relative;
    max-width: 1400px;
    margin: 0 auto;
}
.prev {
    left: 0;
    padding-left: 24px;
    background-image: url(img/exit-man-left@2x.png);
    background-position: left center;
    background-size: 20px 30px;
    background-repeat: no-repeat;
}
.next {
    right: 0;
    padding-right: 24px;
    background-image: url(img/exit-man-right@2x.png);
    background-position: right center;
    background-size: 20px 30px;
    background-repeat: no-repeat;
}
.prev,
.next {
    display: inline-block;
    position: absolute;
    top: 0;
}
.prev.disabled,
.next.disabled {
    opacity: 0.4;
}
.prev.disabled .button,
.next.disabled .button {
    cursor: default;
}
.prev.disabled .button:hover,
.next.disabled .button:hover {
    background: #91f6c4;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 10;
    background-color: rgba(115, 99, 87, 0.7);
    /*dim the background*/
    display: none;
}


article h1 {
    text-align: center;
    margin-top: 2em;
}
article > h2 {
    text-align: center;
    letter-spacing: 3px;
    color: #736357;
    margin-top: 4em;
    font-weight: 300;
    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
}
article h3 {
    margin-top: 2em;
}
@media screen and (min-width: 640px) {
    article h2 {
        margin-top: 2em;
    }
}
article p,
article li {
    line-height: 1.6;
}
@media screen and (min-width: 1000px) {
    article h2 {
        font-size: 1.5em;
        margin: 2em 0;
    }
}

/* layout */
article {
    width: 100%;
    max-width: 1160px;
    margin: 0 auto;
    padding: 0 10px 4em 10px;

    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    -webkit-column-gap: 2em;
    column-gap: 2em;
    grid-column-gap: 2em;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
}
article > h1,
article > h2 {
    -ms-grid-column: 1;
    grid-column-start: 1;
    -ms-grid-column-span: NaN;
    grid-column-end: end;
}
.span1 {
    grid-column: span 1;
}
.span2 {
    grid-column: span 3;
}
.span3 {
    grid-column: span 3;
}
.span4 {
    grid-column: span 3;
}
/* ... */

